# MICDEL

./: CMakeLists.txt  README.md
cmake/: FindSphinx.cmake
doc/: CMakeLists.txt  Doxyfile.in  conf.py  index.rst
fuzz_build/: Makefile
src/Details/: impl_helper.hpp  log_helpers.hpp  meta_helper.hpp  n_indexed_helper.hpp  n_indexed_info.hpp  singleton.hpp  storage_properties_helper.hpp  string_convertion.cpp  string_convertion.hpp  tensor_iterator.hpp  tuple_counter.hpp  tuple_helper.hpp  type_def.hpp  type_list.hpp  value_record.hpp
src/Implem/MDX_emitter/: MDX_emitter.hpp  MDX_emitter_filter_trait.hpp  MDX_emitter_slice_trait.hpp  MDX_emitter_storage.hpp
src/Implem/boost_multi_array/: boost_multi_array.hpp  boost_multi_array_apply_trait.hpp  boost_multi_array_foreach_trait.hpp  boost_multi_array_iterable_trait.hpp  boost_multi_array_random_access_trait.hpp  boost_multi_array_shape_trait.hpp  boost_multi_array_size_trait.hpp  boost_multi_array_slice_trait.hpp  boost_multi_array_slice_view_trait.hpp  boost_multi_array_storage.hpp  boost_multi_array_store_trait.hpp
src/Implem/eigen_matrix/: eigen_matrix.hpp  eigen_matrix_apply_trait.hpp  eigen_matrix_foreach_trait.hpp  eigen_matrix_iterable_trait.hpp  eigen_matrix_random_access_trait.hpp  eigen_matrix_shape_trait.hpp  eigen_matrix_size_trait.hpp  eigen_matrix_slice_trait.hpp  eigen_matrix_slice_view_trait.hpp  eigen_matrix_storage.hpp  eigen_matrix_store_implicit_convertion_trait.hpp  eigen_matrix_store_trait.hpp  eigen_matrix_sum_trait.hpp
src/Implem/graph/: graph.hpp  graph_apply_trait.hpp  graph_create_edge_trait.hpp  graph_filter_trait.hpp  graph_insert_trait.hpp  graph_random_access_trait.hpp  graph_size_trait.hpp  graph_storage.hpp
src/Implem/map_tree/: map_tree.hpp  map_tree_apply_trait.hpp  map_tree_filter_trait.hpp  map_tree_foreach_trait.hpp  map_tree_iterable_trait.hpp  map_tree_random_access_trait.hpp  map_tree_remove_trait.hpp  map_tree_size_trait.hpp  map_tree_slice_trait.hpp  map_tree_storage.hpp
src/Implem/slice_view/: slice_view.hpp  slice_view_random_access_trait.hpp  slice_view_storage.hpp
src/Implem/tuple_map/: tuple_map.hpp  tuple_map_apply_trait.hpp  tuple_map_filter_trait.hpp  tuple_map_foreach_trait.hpp  tuple_map_iterable_trait.hpp  tuple_map_random_access_trait.hpp  tuple_map_remove_trait.hpp  tuple_map_size_trait.hpp  tuple_map_slice_trait.hpp  tuple_map_storage.hpp
src/Interface/: TranslateViewTrait.hpp  apply_trait.hpp  create_edge_trait.hpp  filter_trait.hpp  foreach_trait.hpp  insert_trait.hpp  iterable_trait.hpp  mono_dim_filter_trait.hpp  n_indexed.hpp  random_access_trait.hpp  range.hpp  remove_trait.hpp  scalar_factor_trait.hpp  shape_trait.hpp  size_trait.hpp  slice_trait.hpp  slice_view_trait.hpp  standard_storage_properties.hpp  store_implicit_convertion_trait.hpp  store_trait.hpp  stride_trait.hpp  sum_trait.hpp
src/Logger/: log_manager.cpp  log_manager.hpp  logged_apply_trait.hpp  logged_create_edge_trait.hpp  logged_filter_trait.hpp  logged_foreach_trait.hpp  logged_insert_trait.hpp  logged_iterable_trait.hpp  logged_monodim_filter_trait.hpp  logged_random_access_trait.hpp  logged_remove_trait.hpp  logged_size_trait.hpp  logged_slice_trait.hpp  logged_slice_view_trait.hpp  logger.hpp
src/Tests/: DetailsTest.cpp  catch.hpp  eigen_matrix_test.cpp  graph_test.cpp  logger_test.cpp  sandbox.cpp  tensor_test.cpp  tree_test.cpp
src/benchmark/: apply_benchmark.hpp  bench_virt.cpp  benchmark_helper.hpp  benchmark_main.cpp  deep_copy_benchmark.hpp  filter_benchmark.hpp  graph_impl_benchmark.cpp  map_impl_benchmark.cpp  map_tuple_impl_benchmark.cpp  random_access_benchmark.hpp  tensor_ovehead.cpp  test_virt.cpp  test_virt.h
src/compile_benchmark/: if_boost_instanciation.cpp.erb  if_boost_instanciation_cout.cpp.erb  if_boost_instanciation_for.cpp.erb  if_boost_instanciation_for_cout.cpp.erb  if_eigen_instanciation.cpp.erb  if_tuple_instanciation.cpp.erb  if_tuple_instanciation_for.cpp.erb  raw_boost_instanciation.cpp.erb  raw_boost_instanciation_cout.cpp.erb  raw_boost_instanciation_for.cpp.erb  raw_boost_instanciation_for_cout.cpp.erb  raw_eigen_instanciation.cpp.erb  raw_tuple_instanciation.cpp.erb  raw_tuple_instanciation_for.cpp.erb
src/fuzzing/: fuzz_targets.hpp  fuzzing.cpp  fuzzing_helper.hpp
